Updated travis deploy config to AWS

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,17 @@ services:
 before_install:
   - docker build -t azimousmand/docker-react -f Dockerfile.dev .
 
-    
+script:
+  - docker run azimousmand/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-417392754529"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
