--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t azimousmand/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run azimousmand/docker-react npm run test -- --coverage
+  - docker run -e CI=true azimousmand/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
